--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -8,6 +8,6 @@
 
 <ion-content [fullscreen]="true" color="dark">
 
-<app-noticias></app-noticias>
+<app-noticias [noticias]="noticias"></app-noticias>
 
 </ion-content>
