--- a/src/app/components/noticia/noticia.component.html
+++ b/src/app/components/noticia/noticia.component.html
@@ -1,3 +1,22 @@
-<p>
-  noticia works!
-</p>
+<ion-card color="dark">
+  <ion-card-header>
+    <ion-card-subtitle>
+      <span class="text-primary">
+          {{indice + 1}}.
+      </span>
+      <span class="noticia-source-name">
+        {{noticias.source.name}}
+      </span>
+    </ion-card-subtitle>
+    <ion-card-title>
+      {{noticias.title}}
+    </ion-card-title>
+  </ion-card-header>
+  <ion-img *ngIf="noticias.urlToImage"
+  [src]="noticias.urlToImage"></ion-img>
+  <ion-card-content>
+    <p>
+      {{noticias.description}}
+    </p>
+  </ion-card-content>
+  </ion-card>
