--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,17 +1,25 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header [translucent]="true" noborder>
+  <ion-toolbar color="dark">
     <ion-title>
-      Tab 2
+      Encabezados
     </ion-title>
   </ion-toolbar>
+
+<ion-segment scrollable mode="md" color="primary">
+
+<ion-segment-button mode="md"
+[value]="categorias"
+*ngFor="let categorias of categorias">
+<ion-label text-capitalize>{{categorias}}</ion-label>
+</ion-segment-button>
+
+
+</ion-segment>
+
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content color="dark" [fullscreen]="true">
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+
+
 </ion-content>
